# beetle-traits

./: .gitignore  AGENTS.md  README.md  inference.py  justfile  launch.py  launcher.py  pyproject.toml  rank.py  train.py  train_scalebar.py
data/biorepo-formatted/: annotations.json  annotations_validated.json
data/hawaii-formatted/: annotations.json
docs/api/: llms.txt
docs/api/btx/: configs.md  helpers.md  index.md  metrics.md
docs/experiments/001-extra-data/: README.md  notebook.py  sweep.py
docs/experiments/002-augmentation/: README.md  demo.py  notebook.py  spec.md  sweep.py
docs/experiments/003-lr-scheduling/: README.md  notebook.py  sweep.py
docs/experiments/004-heatmap/: demo.py  notebook.py  spec.md  sweep.py  sweep_results.csv
docs/experiments/005-active-learning/: README.md  notebook.py  plan.md  rank-spec.md  sweep.py  visualization-ideas.md
docs/experiments/005-lr-scheduling-with-heatmap/: README.md  notebook.py
docs/experiments/006-lr-scheduling-with-heatmap/: README.md  notebook.py  sweep.py
docs/experiments/007-biorepo-split/: notebook.py
docs/experiments/008-round1/: notebook.py
docs/experiments/009-round2-training/: notebook.py
docs/experiments/010-annotation-improvements/: README.md  notebook.py
docs/experiments/011-round2-results/: notebook.py
docs/experiments/012-make-unlabeled/: inference.py  notebook.py
docs/experiments/013-scalebar-training/: add_scalebar_to_unlabeled.py  notebook.py
docs/research/: logbook.md
docs/research/logbooks/: sam.md
notebooks/: beetlepalooza_beetles.py  create_annotator_pairwise_scatterplot.py  filter_spec_and_freezing_params_explained.py  hawaii_beetles.py  validate_biorepo_annotations.py
src/beetle_traits/: __init__.py
src/beetra/modeling/: __init__.py  continuous.py
src/btx/: configs.py  heatmap.py  helpers.py  metrics.py  scalebar_infer.py  scalebar_trainer.py
src/btx/data/: __init__.py  augment.py  beetlepalooza.py  biorepo.py  hawaii.py  scalebar.py  scalebar_clip.py  transforms.py  utils.py
src/btx/modeling/: __init__.py  dinov3.py  frozen.py  heatmap.py  pixelmse.py  toy.py
src/btx/objectives/: __init__.py  coords.py  heatmap.py
src/btx/scripts/: apply_rename_log.py  (+16 more)
tests/: conftest.py  test_augment.py  test_beetlepalooza.py  test_configs.py  test_dinov3.py  test_exp004_heatmap_sweep.py  test_heatmap.py  test_inference.py  test_metrics.py  test_modeling_heatmap.py  test_splits.py  test_train.py
tests/sweeps/: empty.py  invalid_syntax.py  no_function.py  raises_error.py  simple.py  with_imports.py  wrong_return_type.py
(+56 files in other folders)
