[project]
name = "btx"
version = "0.1.0"
description = "Beetle trait extraction."
readme = "README.md"
authors = [
    { name = "Samuel Stevens", email = "samuel.robert.stevens@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.9",
    "chex>=0.1.89",
    "einops>=0.8.1",
    "equinox>=0.13.0",
    "grain>=0.2.11",
    "huggingface-hub>=0.34.4",
    "jax[cuda12]>=0.7.2",
    "jaxtyping>=0.3.2",
    "marimo>=0.15.2",
    "matplotlib>=3.10.7",
    "optax>=0.2.5",
    "pillow>=11.3.0",
    "polars>=1.31.0",
    "scikit-image>=0.25.2",
    "submitit>=1.5.3",
    "tyro>=0.9.26",
    "wandb>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F722", "E402", "E501"]

[tool.ruff]
exclude = ["tests/sweeps/invalid_syntax.py"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pdoc3>=0.11.6",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
